objects/zisf__ZoomInfo_Clean_Settings__c.object
<CustomObject>
    <description>Zoominfo Clean Settings</description>
    <fields>
        <fullName>zisf__Account_Mapping__c</fullName>
        <label>Account_Mapping</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zisf__Contact_Mapping__c</fullName>
        <label>Contact_Mapping</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zisf__Contact_Updated_Filter__c</fullName>
        <label>Contact Updated Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zisf__Lead_Mapping__c</fullName>
        <label>Lead_Mapping</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zisf__Lead_Updated_Filter__c</fullName>
        <label>Lead Updated Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zisf__Profile_ID__c</fullName>
        <label>Profile ID or Global</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__accounts_clean_active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>accounts clean active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__accounts_clean_filter__c</fullName>
        <label>accounts clean filter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All records</fullName>
                </value>
                <value>
                    <fullName>Filter by Report</fullName>
                </value>
                <value>
                    <fullName>Filter by SOQL</fullName>
                    <default>true</default>
                    <label>Filter by SOQL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zisf__accounts_clean_report__c</fullName>
        <label>accounts clean report</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__accounts_clean_rule__c</fullName>
        <label>accounts clean rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__accounts_zoom_record_clean_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>accounts zoom record clean active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__contacts_clean_active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>contacts clean active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__contacts_clean_filter__c</fullName>
        <label>contacts clean filter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All records</fullName>
                </value>
                <value>
                    <fullName>Filter by Report</fullName>
                </value>
                <value>
                    <fullName>Filter by SOQL</fullName>
                    <default>true</default>
                    <label>Filter by SOQL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zisf__contacts_clean_report__c</fullName>
        <label>contacts clean report</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__contacts_clean_rule__c</fullName>
        <label>contacts clean rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__contacts_zoom_record_clean_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>contacts zoom record clean active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__leads_clean_active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>leads clean active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__leads_clean_filter__c</fullName>
        <label>leads clean filter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All records</fullName>
                </value>
                <value>
                    <fullName>Filter by Report</fullName>
                </value>
                <value>
                    <fullName>Filter by SOQL</fullName>
                    <default>true</default>
                    <label>Filter by SOQL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zisf__leads_clean_report__c</fullName>
        <label>leads clean report</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__leads_clean_rule__c</fullName>
        <label>leads clean rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__leads_zoom_record_clean_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>leads zoom record clean active</label>
        <type>Checkbox</type>
    </fields>
    <label>ZoomInfo Clean Setting</label>
    <listViews>
        <fullName>zisf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ZoomInfo Clean Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZoomInfo Clean Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>